crud-editar: Criada função de editar usuário

--- a/formulario.html
+++ b/formulario.html
@@ -23,23 +23,23 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input value="" id="nome" type="text" class="validate">
-                    <label class="active" for="nome">Nome</label>
+                    <label class="active" for="nome" id="labelNome">Nome</label>
                 </div>
                 <div class="input-field col s12">
                     <input value="" id="sobrenome" type="text" class="validate">
-                    <label class="active" for="sobrenome">Sobrenome</label>
+                    <label class="active" for="sobrenome" id="labelSobrenome">Sobrenome</label>
                 </div>
                 <div class="input-field col s12">
                     <input value="" id="idade" type="text" class="validate">
-                    <label class="active" for="idade">Idade</label>
+                    <label class="active" for="idade" id="labelIdade">Idade</label>
                 </div>
                 <div class="input-field col s12">
                     <input value="" id="email" type="email" class="validate">
-                    <label class="active" for="email">E-mail</label>
+                    <label class="active" for="email" id="labelEmail">E-mail</label>
                 </div>
                 <div class="input-field col s12">
                     <input value="" id="senha" type="password" class="validate">
-                    <label class="active" for="senha">Senha</label>
+                    <label class="active" for="senha" id="labelSenha">Senha</label>
                 </div>
                 <button class="btn waves-effect waves-light" type="submit" id="btn-salvar">Salvar
                     <i class="material-icons right">send</i>
@@ -52,6 +52,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/formulario.js"></script>
+
 </body>
 
 </html>
