--- a/formulario.html
+++ b/formulario.html
@@ -44,6 +44,8 @@
                 <button class="btn waves-effect waves-light" type="submit" id="btn-salvar">Salvar
                     <i class="material-icons right">send</i>
                 </button>
+                <button class="btn waves-effect waves-light red" type="button" id="btn-cancelar">Cancelar
+                </button>
             </div>
         </form>
     </div>
@@ -52,7 +54,6 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/formulario.js"></script>
-
 </body>
 
 </html>
