crud-funcao deletar: Criada função deletar usuário

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <nav class="navBar" role="navigation">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </nav>
-    <div class="container">
+    <div class="container" id="modalExcluir">
         <div class="botoes">
             <a class="waves-effect waves-light btn" id="btn-voltar">Voltar</a>
             <a class="waves-effect waves-light btn red" id="btn-adicionar">+</a>
