--- a/main.html
+++ b/main.html
@@ -17,10 +17,12 @@
     <nav class="navBar" role="navigation">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </nav>
-    <div class="container" id="modalExcluir">
+    <div class="container">
         <div class="botoes">
             <a class="waves-effect waves-light btn" id="btn-voltar">Voltar</a>
-            <a class="waves-effect waves-light btn red" id="btn-adicionar">+</a>
+            <a class="waves-effect waves-light btn red" id="btn-adicionar">
+                <i class="material-icons">add</i>
+            </a>
         </div>
         <h1 class="titulo">Lista de Usuários</h1>
         <table>
