add imagem na pagina de login

--- a/main.html
+++ b/main.html
@@ -19,13 +19,15 @@
     </nav>
     <div class="container">
         <div class="botoes">
-            <a class="waves-effect waves-light btn" id="btn-voltar">Voltar</a>
-            <a class="waves-effect waves-light btn red" id="btn-adicionar">
+            <a class="btn-floating waves-effect waves-light btn" id="btn-voltar">
+                <i class="material-icons">arrow_back</i>
+            </a>
+            <a class="btn-floating waves-effect waves-light btn" id="btn-adicionar">
                 <i class="material-icons">add</i>
             </a>
         </div>
-        <h1 class="titulo">Lista de Usuários</h1>
-        <table>
+        <h1 class="titulo">Usuários</h1>
+        <table class="striped">
             <thead>
                 <tr>
                     <th>ID</th>
