--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
+    <div class="imagem-login">
+
+    </div>
     <div class="container">
       <br><br>
       <h1 class="header center texto-login">LOGIN</h1>
