add imagem na pagina de login

--- a/main.html
+++ b/main.html
@@ -17,7 +17,10 @@
     <nav class="navBar" role="navigation">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </nav>
+    <div class="imagem-login">
+    </div>
     <div class="container">
+
         <div class="botoes">
             <a class="btn-floating waves-effect waves-light btn" id="btn-voltar">
                 <i class="material-icons">arrow_back</i>
