--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
   <nav class="navBar" role="navigation">
     <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
   </nav>
-  <div class="imagem-login">
-  </div>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <br><br>
-      <h1 class="header center texto-login">LOGIN</h1>
-      <div class="row center">
-        <label for="">Usuário:</label>
-        <input type="text" id="usuario">
-        <label for="">Senha:</label>
-        <input type="text" id="senha">
-        <button class="btn waves-effect waves-light" id="botao-acessar" type="submit" name="action">ACESSAR
-          <i class="material-icons right">send</i>
-        </button>
+      <div class="card">
+        <div class="card-content">
+          <h1 class="header center texto-login">LOGIN</h1>
+          <div class="row center">
+            <label for="">Usuário:</label>
+            <input type="text" id="usuario">
+            <label for="">Senha:</label>
+            <input type="text" id="senha">
+            <button class="btn waves-effect waves-light" id="botao-acessar" type="submit" name="action">ACESSAR
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
