ajuste da tela de login

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-  <nav class="navBar" role="navigation">
-    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-  </nav>
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
+  <div class="img-logo">
+  </div>
+  <div class="container">
       <div class="card">
         <div class="card-content">
           <h1 class="header center texto-login">LOGIN</h1>
@@ -33,7 +31,6 @@
         </div>
       </div>
     </div>
-  </div>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
