ajuste da tela de login

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label for="">Usuário:</label>
             <input type="text" id="usuario">
             <label for="">Senha:</label>
-            <input type="text" id="senha">
+            <input type="password" id="senha">
             <button class="btn waves-effect waves-light" id="botao-acessar" type="submit" name="action">ACESSAR
               <i class="material-icons right">send</i>
             </button>
